tests/regression/baselines/test32_type_escape_usage.expected
ERROR
SyntaxError: Unexpected token [
Note: expected tokens: ["(", "`", "begin", "fun", "if", "let", "loop", "match", "{", r#"\"[^\\\\\"\\n\\r]*(?:\\\\[tn'\"\\\\][^\\\\\"\\n\\r]*)*\""#, r#"-?(?:0|[1-9][0-9]*)[eE]-?[0-9]+"#, r#"-?(?:0|[1-9][0-9]*)\\.[0-9]*(?:[eE]-?[0-9]+)?"#, r#"-?(?:[0-9]+)"#, r#"[A-Za-z_]\\w*"#]
Parse error occurred here:
// Test if we can mix them - this should work since they're both containers
let containers = [container1; container2];
                 ^                         
